--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -38,7 +38,7 @@
   <jsp-config>
     <jsp-property-group>
       <url-pattern>*.jsp</url-pattern>
-      <page-encoding>Shift_JIS</page-encoding>
+      <page-encoding>UTF-8</page-encoding>
     </jsp-property-group>
   </jsp-config>
 </web-app>
